--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -248,4 +248,46 @@
         <item name="android:drawableRight">@drawable/ic_arrow_drop_down</item>
         <item name="android:background">@drawable/bottom_frame</item>
     </style>
+
+    <style name="OrderButtonStyle">
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">@dimen/fontsize_16sp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:padding">@dimen/margin_16dp</item>
+    </style>
+
+    <style name="OrderHeading">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/fontsize_24sp</item>
+        <item name="android:textColor">@color/staples_black</item>
+    </style>
+
+    <style name="OrderLabel">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textSize">@dimen/fontsize_16sp</item>
+        <item name="android:textColor">@color/staples_black</item>
+        <item name="android:paddingTop">@dimen/verticalspacing_8dp</item>
+    </style>
+
+    <style name="OrderValue">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/fontsize_16sp</item>
+        <item name="android:textColor">@color/staples_black</item>
+        <item name="android:paddingTop">@dimen/verticalspacing_8dp</item>
+    </style>
+
+    <style name="HorizontalDivLine">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/div_line</item>
+        <item name="android:background">@color/staples_dark_gray</item>
+        <item name="android:layout_marginTop">@dimen/margin_16dp</item>
+    </style>
+
 </resources>
