--- a/app/src/main/res/layout/order_fragment.xml
+++ b/app/src/main/res/layout/order_fragment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.staples.mobile.cfa.widget.AnimatorFrame xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/order_layout">
     <com.staples.mobile.cfa.widget.LinearLayoutWithOverlay
         android:id="@+id/overlayable_layout"
         android:layout_width="match_parent"
@@ -11,9 +12,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/orders_list"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:paddingBottom="@dimen/verticalspacing_24dp"
-            android:clipToPadding="false"/>
+            android:layout_width="match_parent"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
