--- a/app/src/main/res/layout/shipment_listitem.xml
+++ b/app/src/main/res/layout/shipment_listitem.xml
@@ -7,7 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/shipmentLbl"
-        android:layout_marginTop="@dimen/verticalspacing_8dp"
+        android:layout_marginTop="@dimen/verticalspacing_16dp"
         android:textSize="@dimen/fontsize_24sp"
         android:textColor="@color/staples_black"/>
     <TextView
@@ -18,16 +18,12 @@
         android:layout_marginRight="@dimen/margin_16dp"
         android:textSize="@dimen/fontsize_16sp"
         android:textColor="@color/staples_black" />
-    <View
-        android:id="@+id/horizontal_rule"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="@dimen/verticalspacing_8dp"
-        android:background="@color/staples_middle_gray" />
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
+        android:layout_marginTop="@dimen/verticalspacing_16dp"
+        android:layout_marginBottom="@dimen/verticalspacing_16dp"
         android:layout_height="wrap_content">
     <ImageView
         android:layout_width="0dp"
@@ -35,12 +31,12 @@
         android:layout_height="120dip"
         android:id="@+id/skuImage"
         android:layout_marginRight="@dimen/margin_16dp"
-        android:layout_marginTop="@dimen/verticalspacing_8dp"/>
+        android:layout_marginTop="@dimen/verticalspacing_16dp"/>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_marginTop="@dimen/verticalspacing_8dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/verticalspacing_16dp"
             android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
@@ -55,7 +51,6 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/shipmentPrice"
                 android:textSize="@dimen/fontsize_16sp"
-                android:layout_marginTop="@dimen/verticalspacing_8dp"
                 android:textColor="@color/staples_green" />
             <LinearLayout
                 android:layout_width="match_parent"
@@ -68,25 +63,16 @@
                     android:text="Quantity"
                     android:id="@+id/shipmentQtyLbl"
                     android:textSize="@dimen/fontsize_16sp"
-                    android:textColor="@color/staples_middle_gray" />
+                    android:textColor="@color/staples_dark_gray" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/shipmentQty"
                     android:textSize="@dimen/fontsize_16sp"
                     android:layout_marginLeft="10dip"
-                    android:textColor="@color/staples_middle_gray" />
+                    android:textColor="@color/staples_dark_gray" />
                 </LinearLayout>
 
         </LinearLayout>
-
     </LinearLayout>
-
-    <!--<View-->
-        <!--android:id="@+id/horizontal_rule"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="1dp"-->
-        <!--android:layout_marginTop="@dimen/verticalspacing_8dp"-->
-        <!--android:background="@color/background_light_gray" />-->
-
 </LinearLayout>
