Red tab indicators

--- a/app/src/main/res/layout/drawer_account.xml
+++ b/app/src/main/res/layout/drawer_account.xml
@@ -17,9 +17,9 @@
         android:layout_weight="1"/>
     <TextView
         android:id="@+id/account_option"
+        style="@style/DrawerStyle"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:gravity="right"
-        android:padding="@dimen/action_bar_half_margin"
-        style="@style/DrawerStyle"/>
+        android:padding="@dimen/action_bar_half_margin"/>
 </LinearLayout>
