--- a/app/src/main/res/layout/checkout_fragment.xml
+++ b/app/src/main/res/layout/checkout_fragment.xml
@@ -20,7 +20,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/cartmath_half_margin"
+        android:padding="@dimen/margin_16dp"
         android:background="@color/staples_middle_gray">
 
         <!-- coupons & rewards -->
@@ -49,11 +49,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:paddingLeft="@dimen/cartmath_half_margin"
-            android:paddingRight="@dimen/cartmath_half_margin"
             android:text="@string/item_subtotal"
             android:textColor="@color/staples_black"
-            android:textSize="@dimen/fontsize_24sp"
+            android:textSize="@dimen/fontsize_18sp"
             />
 
         <TextView
@@ -62,10 +60,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
-            android:paddingLeft="@dimen/cartmath_half_margin"
-            android:paddingRight="@dimen/cartmath_half_margin"
             android:textColor="@color/staples_black"
-            android:textSize="@dimen/fontsize_24sp"
+            android:textSize="@dimen/fontsize_18sp"
             />
 
 		<!-- total handling cost/overweight shipping -->
@@ -75,11 +71,10 @@
 			android:layout_below="@id/checkout_item_subtotal"
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"
-            android:paddingLeft="@dimen/cartmath_half_margin"
-            android:paddingRight="@dimen/cartmath_half_margin"
+            android:paddingTop="@dimen/margin_16dp"
 			android:text="@string/oversized_shipping_fee"
 			android:textColor="@color/staples_black"
-            android:textSize="@dimen/fontsize_24sp"
+            android:textSize="@dimen/fontsize_18sp"
             android:visibility="gone"
 		/>
 		<TextView
@@ -88,10 +83,9 @@
 			android:layout_alignParentRight="true"
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"
-            android:paddingLeft="@dimen/cartmath_half_margin"
-            android:paddingRight="@dimen/cartmath_half_margin"
+            android:paddingTop="@dimen/margin_16dp"
 			android:textColor="@color/staples_black"
-            android:textSize="@dimen/fontsize_24sp"
+            android:textSize="@dimen/fontsize_18sp"
             android:visibility="gone"
 		/>
 
@@ -102,11 +96,10 @@
 			android:layout_below="@id/oversized_shipping_label"
 			android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/cartmath_half_margin"
-            android:paddingRight="@dimen/cartmath_half_margin"
+            android:paddingTop="@dimen/margin_16dp"
 			android:text="@string/shipping"
 			android:textColor="@color/staples_black"
-            android:textSize="@dimen/fontsize_24sp"
+            android:textSize="@dimen/fontsize_18sp"
             android:visibility="gone"
 			/>
 		<TextView
@@ -115,11 +108,10 @@
 			android:layout_alignBaseline="@id/checkout_shipping_label"
 			android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/cartmath_half_margin"
-            android:paddingRight="@dimen/cartmath_half_margin"
+            android:paddingTop="@dimen/margin_16dp"
 			android:textColor="@color/staples_black"
-            android:textSize="@dimen/fontsize_24sp"
-			android:visibility="gone"
+            android:textSize="@dimen/fontsize_18sp"
+            android:visibility="gone"
 			/>
 
         <!--tax-->
@@ -129,11 +121,10 @@
 			android:layout_below="@id/checkout_shipping_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/cartmath_half_margin"
-            android:paddingRight="@dimen/cartmath_half_margin"
+            android:paddingTop="@dimen/margin_16dp"
             android:text="@string/tax"
 			android:textColor="@color/staples_black"
-            android:textSize="@dimen/fontsize_24sp"
+            android:textSize="@dimen/fontsize_18sp"
             android:visibility="gone"
 			/>
 
@@ -143,10 +134,9 @@
 			android:layout_below="@id/checkout_shipping_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/cartmath_half_margin"
-            android:paddingRight="@dimen/cartmath_half_margin"
+            android:paddingTop="@dimen/margin_16dp"
 			android:textColor="@color/staples_black"
-            android:textSize="@dimen/fontsize_24sp"
+            android:textSize="@dimen/fontsize_18sp"
             android:visibility="gone"
 			/>
 
@@ -154,21 +144,21 @@
         <android.support.v7.widget.CardView
             android:id="@+id/co_submission_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/verticalspacing_48dp"
             android:layout_below="@id/checkout_tax"
-            android:layout_marginTop="@dimen/verticalspacing_8dp"
-            android:visibility="gone"
+            android:layout_marginTop="@dimen/margin_16dp"
             card_view:contentPadding="@dimen/cartmath_half_margin"
             card_view:cardCornerRadius="8dp"
             card_view:cardElevation="0dp"
-            card_view:cardBackgroundColor="@color/staples_red" >
+            card_view:cardBackgroundColor="@color/staples_red"
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|center_vertical"
                 android:text="@string/submit_order"
-                android:textSize="@dimen/fontsize_34sp"
+                android:textSize="@dimen/fontsize_18sp"
                 android:textColor="@color/staples_white"
                 />
             <TextView
@@ -176,7 +166,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right|center_vertical"
-                android:textSize="@dimen/fontsize_34sp"
+                android:textSize="@dimen/fontsize_18sp"
                 android:textColor="@color/staples_white"
                 />
 
