button padding fix

--- a/app/src/main/res/layout/checkout_fragment.xml
+++ b/app/src/main/res/layout/checkout_fragment.xml
@@ -157,6 +157,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|center_vertical"
+                android:paddingLeft="@dimen/cartmath_half_margin"
                 android:text="@string/submit_order"
                 android:textSize="@dimen/fontsize_18sp"
                 android:textColor="@color/staples_white"
@@ -165,6 +166,7 @@
                 android:id="@+id/checkout_order_total"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingRight="@dimen/cartmath_half_margin"
                 android:layout_gravity="right|center_vertical"
                 android:textSize="@dimen/fontsize_18sp"
                 android:textColor="@color/staples_white"
