--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -325,7 +325,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/staples_white">
+        <View
+            android:layout_height="@dimen/div_line"
+            android:layout_width="match_parent"
+            android:background="@color/staples_dark_gray"/>
         <TextView
             android:id="@+id/select_sku"
             android:textSize="@dimen/fontsize_16sp"
