--- a/app/src/main/res/layout/rewards_linking.xml
+++ b/app/src/main/res/layout/rewards_linking.xml
@@ -44,7 +44,7 @@
         android:hint="@string/rewards_phone_number"
         android:inputType="phone"
         android:imeOptions="actionDone"
-        android:maxLength="15"/>
+        android:maxLength="14"/>
     <Button
         android:id="@+id/rewards_link_acct_button"
         android:layout_width="wrap_content"
@@ -55,10 +55,8 @@
         android:text="@string/link_account"
         android:textSize="@dimen/fontsize_16sp"
         android:textColor="@color/staples_white"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
+        android:padding="@dimen/action_bar_half_margin"
+        android:background="@drawable/add_to_cart"
         />
 </RelativeLayout>
 
