* moving display of associate discount out of coupon list and into designated area * fixing the handling of associate discount coupons

--- a/app/src/main/res/layout/coupon_item_no_rewards_msg.xml
+++ b/app/src/main/res/layout/coupon_item_no_rewards_msg.xml
@@ -9,4 +9,5 @@
     android:textSize="@dimen/fontsize_14sp"
     android:padding="0dp"
     android:text="@string/no_redeemable_rewards"
+    android:textColor="@color/staples_dark_gray"
 />
