--- a/app/src/main/res/layout/coupon_item_add.xml
+++ b/app/src/main/res/layout/coupon_item_add.xml
@@ -13,16 +13,17 @@
         android:hint="@string/coupon_code_hint"
         android:inputType="number"
         android:imeOptions="actionDone"
+        android:textSize="@dimen/fontsize_16sp"
         android:maxLength="16"/>
     <Button
         android:id="@+id/coupon_add_button"
-        android:layout_width="85dp"
+        android:layout_width="70dp"
         android:layout_height="36dp"
         android:layout_alignParentRight="true"
         android:layout_gravity="center_vertical"
-        android:background="@color/staples_red"
+        android:background="@drawable/rounded_corner_green"
         android:text="@string/add"
-        android:textSize="@dimen/fontsize_14sp"
+        android:textSize="@dimen/fontsize_16sp"
         android:textColor="@color/staples_white"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
