--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -290,4 +290,15 @@
         <item name="android:layout_marginTop">@dimen/margin_16dp</item>
     </style>
 
+    <style name="ExternalButtonStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:textSize">@dimen/fontsize_16sp</item>
+        <item name="android:textColor">@color/staples_black</item>
+        <item name="android:background">@color/staples_white</item>
+    </style>
+
 </resources>
